# pypackage

./: .gitignore  LICENSE  Pipfile  pyproject.toml  readme.md
docs/: development.md
pypackage/: __init__.py  random.py
