[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pypackage"
version = "0.0.1"
authors = [
  { name="Oliver Hawkins", email="oli@olihawkins.com" },
]
description = "An example Python package."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "numpy"
]

[tool.hatch.build.targets.sdist]
exclude = [
  "Pipfile",
  "Pipfile.lock",
  "/.venv",
  "/docs",
  "/dist",
  "/tests"
]